--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -9,10 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-  <title>Grids & Circles</title>
+  <title>SH</title>
 </head>
 <body class="container-fluid">
-<h1>Grids & Circles</h1>
+<h1>SH</h1>
 <h2>Production Management</h2>
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
   <a th:href="@{/new-product}" class="btn btn-primary me-md-2" type="button">Add Product</a>
